[metadata]
name = dbscan
version = 0.0.1
author = Egor Sencov
author_email = 'senichka1234@gmail.com'
description = Sky Clustering by DBSCAN
long_description = file: README.md
url = 'without'
license = MIT
keywords = science, astrophysics
classifiers = 
        Intended Audience :: Science/Research
        Intended Audience :: Education
        License :: OSI Approved :: MIT License
        Topic :: Education
        Topic :: Scientific/Engineering :: Astronomy
        Programming Language :: Python :: 3
        # See full list on https://pypi.org/classifiers/

[options]
packages = find:
install_requires =
    numpy>=1.13
    scipy>=1.0
    matplotlib>=2.0
    pandas
    sklearn
    astroquery
    sys

[options.entry_points]
console_scripts =
    dbscan = bin.__main__

[options.packages.find]
exclude = 
    test
